--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@ node_modules
 .tmp
 npm-debug.log
 ./01_Fundamental_Concepts_in_LlamaIndex/persisted_storage
-.vscode/settings.json
+.vscode/
+.devcontainer/
+03_Naive_RAG/gutenberg_books
+scratchpad/
